MDEV-4206 : log all slow statements (do not use filters),  if  log_slow_filter is empty.